[package]
name = "gm_ollama"
authors = ["Earu"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gmod = { version = "*", default-features = false, features = ["gmcl"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"